# Hitcher

./: .gitignore  CMakeLists.txt  README.md  build_index.py  make.sh
configure/: configure.ini
dataset/gpt_cache/: mqa.py  mqa_seg.py  test.py
dataset/image/: clip.py  flatten.py
dataset/rag/: gnq.py  mmlu.py  test_wiki.py  wiki.py  wiki_seg.py
eval/: CMakeLists.txt  benchmark_cpu.cpp  benchmark_rummy.cpp  benchmark_stream.cpp  profile.cpp
faiss/: CMakeLists.txt
faiss/gpu/: CMakeLists.txt  StandardGpuResources.cpp
faiss/gpu/hitcher/: gpu_profile.cu  gpu_profile.cuh  gpu_worker.cu  gpu_worker.cuh  h_gpu_utils.cu  h_gpu_utils.cuh  rummy_gpu_worker.cu  rummy_gpu_worker.cuh
faiss/gpu/impl/: Distance.cu  IVFFlat.cu  IVFFlatScan.cu  IVFFlatScan.cuh  IVFUtils.cu  IVFUtils.cuh  IVFUtilsSelect1.cu  IVFUtilsSelect2.cu  RemapIndices.cpp
faiss/gpu/utils/: DeviceVector.cuh
faiss/hitcher/: client.cpp  client.h  common.h  configure.h  cpu_profile.cpp  cpu_profile.h  io.cpp  io.h  reducer.cpp  reducer.h  scheduler.cpp  scheduler.h  storage.cpp  storage.h  task.h  test.cpp  test.h  worker.cpp  worker.h
faiss/impl/: index_read.cpp
faiss/invlists/: InvertedLists.cpp  InvertedLists.h
faiss/utils/: distances.h  distances_simd.cpp
